// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Route List 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgba(170, 170, 170, 1)",
          "fontSize": 16,
        },
        undefined,
        Object {
          "fontFamily": "voyager",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgba(119, 119, 119, 1)",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "lineHeight": 15,
            "marginHorizontal": 8,
          },
          undefined,
        ]
      }
    >
      Interlaken
    </Text>
    <View>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgba(119, 119, 119, 1)",
              "fontSize": 12,
            },
            undefined,
            Object {
              "fontFamily": "voyager",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgba(119, 119, 119, 1)",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "lineHeight": 15,
            "marginHorizontal": 8,
          },
          undefined,
        ]
      }
    >
      Zerma
    </Text>
    <View>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgba(119, 119, 119, 1)",
              "fontSize": 12,
            },
            undefined,
            Object {
              "fontFamily": "voyager",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgba(119, 119, 119, 1)",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "lineHeight": 15,
            "marginHorizontal": 8,
          },
          undefined,
        ]
      }
    >
      Lucerne
    </Text>
  </View>
</View>
`;

exports[`Route List with custom font styles 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 16,
      },
      Object {
        "margin": 24,
      },
    ]
  }
>
  <Unknown
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgba(170, 170, 170, 1)",
          "fontSize": 16,
        },
        undefined,
        Object {
          "fontFamily": "voyager",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Unknown>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Unknown
      style={
        Array [
          Object {
            "color": "rgba(119, 119, 119, 1)",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "lineHeight": 15,
            "marginHorizontal": 8,
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "lineHeight": 15,
            "marginHorizontal": 6,
          },
        ]
      }
    >
      Interlaken
    </Unknown>
    <View>
      <Unknown
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgba(119, 119, 119, 1)",
              "fontSize": 12,
            },
            undefined,
            Object {
              "fontFamily": "voyager",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Unknown>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Unknown
      style={
        Array [
          Object {
            "color": "rgba(119, 119, 119, 1)",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "lineHeight": 15,
            "marginHorizontal": 8,
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "lineHeight": 15,
            "marginHorizontal": 6,
          },
        ]
      }
    >
      Zerma
    </Unknown>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Unknown
      style={
        Array [
          Object {
            "color": "rgba(119, 119, 119, 1)",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "lineHeight": 15,
            "marginHorizontal": 8,
          },
          Object {
            "color": "rgba(170, 170, 170, 1)",
            "marginHorizontal": 0,
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "lineHeight": 15,
            "marginHorizontal": 6,
          },
        ]
      }
    >
      +
      1
       
      city
    </Unknown>
  </View>
</View>
`;
